配置gateway模块使用Nacos进行路由配置，实现按应用名路由转发